@@ -1,3 +1,9 @@
+2013-12-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* src/comm.c (comm_send_preferences): Remove server_info preferences as
+	they have no use for the manager. Do not send scanner-side only
+	preferences which are prefixed with sys_.
+
 2013-12-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* INSTALL: Drop step 1.2 about rules file and make an
